# 2djitsu

./: 2dj.cpp  CMakeLists.txt  README.md  build.bat  comp.bat  data.hpp  model.yaml  shell.bat
code/: 2dj.cpp  data.hpp
src/: 2dj.cpp  data.hpp
